--- a/index.html
+++ b/index.html
@@ -31,32 +31,87 @@
                 <h1 class="header2">We always make sure to provide you with good food</h1>
                 <p class="pera2">Don’t miss a thing! Subscribe to our newsletter</p>
                 <p class="follow">Follow Us On</p>
-            <div>
-        </div>
-            
-        <div class="icons">
-            <ul>
-                <li>
-                    <a href="https://www.facebook.com" target="_blank">
-                        <img class="pic" src="assets/facebook.png" alt="Facebook">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com" target="_blank">
-                        <img class="pic" src="assets/instagram.png" alt="Instagram">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.twitter.com" target="_blank">
-                        <img class="pic" src="assets/X.jpg" alt="Twitter (X)">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.pinterest.com" target="_blank">
-                        <img class="pic" src="assets/pinterest.png" alt="Pinterest">
-                    </a>
-                </li>
-            </ul>
+                <div>
+                </div>
+
+                <div class="icons">
+                    <ul>
+                        <li>
+                            <a href="https://www.facebook.com" target="_blank">
+                                <img class="pic" src="assets/facebook.png" alt="Facebook">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com" target="_blank">
+                                <img class="pic" src="assets/instagram.png" alt="Instagram">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.twitter.com" target="_blank">
+                                <img class="pic" src="assets/X.jpg" alt="Twitter (X)">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.pinterest.com" target="_blank">
+                                <img class="pic" src="assets/pinterest.png" alt="Pinterest">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+    </section>
+    <section id="buy">
+        <div class="content">
+            <div class="card-text">
+                <p class="pera3">Favorite Brands</p>
+                <h1 class="header3">Your Favorite Brands Food Are Now On Sale</h1>
+            </div>
+            <div id="cards">
+                <div class="single-card">
+                    <div>
+                        <img class="control-image" src="assets/pizza.png" alt="">
+                    </div>
+                    <div class="single-card-text">
+                        <div>
+                            <button class="card-btn">Pizza Burg</button>
+                        </div>
+                        <div>
+                            <h1 class="header4">Up To 50% Off</h1>
+                            <p class="pera4">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="single-card">
+                    <div>
+                        <img  class="control-image" src="assets/biriyani.png" alt="">
+                    </div>
+                    <div class="single-card-text">
+                        <div>
+                            <button class="card-btn">Kacchi Bhai</button>
+                        </div>
+                        <div>
+                            <h1 class="header4">Up To 50% Off</h1>
+                            <p class="pera4">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="single-card">
+                    <div>
+                        <img  class="control-image" src="assets/burger.png" alt="">
+                    </div>
+                    <div>
+                        <div class="single-card-text">
+                            <button class="card-btn">Burger King</button>
+                        </div>
+                        <div>
+                            <h1 class="header4">Up To 50% Off</h1>
+                            <p class="pera4">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="btn-set">
+                <button class="btn">Watch all sets</button>
+            </div>
         </div>
     </section>
 </body>
