Final work commit no.3

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 </head>
 
 <body>
-    <section id="hero">
+    <div style="display: flex; justify-content: center;">
+        <nav class="nav-bar">
+            <ul>
+                <li class="single-nav"><a href="#hero">Home</a></li>
+                <li class="single-nav"><a href="#about-us">About</a></li>
+                <li class="single-nav"><a href="#buy">Order</a></li>
+            </ul>
+        </nav>
+    </div> 
+    <section id="hero">    
         <div class="hero-box">
             <p class="subtitle">Savor the Flavors</p>
             <h1 class="header1">Experience Culinary Excellence Food Experience</h1>
